# ARGOS-2

./: .claudeignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.test  LICENSE  README.md  clear_n8n.py  config.yaml  docker-compose.yml  inject_n8n.py  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
api/: security.py  server.py
dashboard/: package-lock.json  vite.config.js
docs/: ARCHITECTURE.md  CONFIGURATION_GUIDE.md  DEVELOPMENT.md  SPEC_TEMPLATE.md  TECHNICAL_SPECIFICATION.md  TELEGRAM_MODULE_SPEC.md  n8n_custom_workflows.md  n8n_integration.md
eval/: gaia_eval.py  scorer.py
scripts/: __init__.py  clear_n8n.py  inject_n8n.py  main.py  migrate_embeddings.py  migrate_sqlite_to_pg.py  n8n_client.py  test_api_manual.py
src/: agent.py  config.py  logging_config.py  settings.py  tools.py  upload.py  utils.py  vision.py  voice.py  workflows_config.py
tests/: conftest.py  test_agent.py  test_agent_history.py  test_api.py  test_api_streaming.py  test_api_upload.py  test_circuit_breaker.py  test_cli_attach.py  test_compaction.py  test_conversation_coherence.py  test_core_engine.py  test_dashboard.py  test_db.py  test_docker_isolation.py  test_executor.py  test_executor_async.py  test_gaia_eval.py  test_gaia_scorer.py  test_gaia_tools.py  test_inject_n8n.py  test_intent.py  test_litellm_routing.py  test_llm_client.py  test_logging_config.py  test_mem0_adapter.py  test_memory.py  test_memory_integration.py  test_migrations.py  test_n8n_workflows.py  test_name_detection.py  test_planner.py  (+17 more)
(+83 files in other folders)
