[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "argos"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "fastapi>=0.130",
    "uvicorn[standard]>=0.42",
    "numpy>=1.26",
    "Pillow>=11.0",
    "psutil>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: Integration tests that require running external services (n8n, Docker)",
]
